@@ -1,3 +1,7 @@
+2007-02-05  J. Tang  <jtang@tresys.com>
+
+	* Official release of SETools-3.1.
+
 2007-02-02  J. Tang  <jtang@tresys.com>
 
 	* added RPM spec files.
